--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -128,6 +128,14 @@ header {
     background-color: $background-third; 
   }
 
+  .hiddenOnLargeScreens {
+    display: none;
+  
+    @media (min-width: 768px) and (max-width: 1023px) {
+      display: block;
+    }
+  }
+
   .logoBox {
     display: flex;
     justify-content: center;
