--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -128,10 +128,10 @@ header {
     background-color: $background-third; 
   }
 
-  .hiddenOnLargeScreens {
+  .headerNav li a.hiddenOnLargeScreens {
     display: none;
   
-    @media (min-width: 768px) and (max-width: 1023px) {
+    @media (min-width: 360px) and (max-width: 767px) {
       display: block;
     }
   }
