--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -9,6 +9,10 @@
   overflow-y: auto;
   overflow-x: hidden;
   background-color: $background-secondary;
+
+  // @media (min-width: 360px) and (max-width: 767px) {
+  //   width: 100%;
+  // }
   
 }
 
