editing posts and comments in GroupPage

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,7 @@
 @use "./styles/shinyCta.scss" as *;
 
 // Variables for Fonts
-$small: 12px; //
+$small: 12px; 
 $smaller: 14px;
 $normal: 16px;
 $medium: 18px;
