--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -8,13 +8,9 @@
   background-color: $background-secondary;
   border-radius: 10px;
   overflow-y: auto; 
-  transition: height 1s ease; 
-  padding-top: 10px;
+  transition: height 1s ease;   
   border: 3px solid $twelfth;
-  &.expanded {
-    // height: 52vh; 
-    // overflow-y: scroll; 
-    // transition: height 1s ease; 
+  &.expanded {    
     max-height: 52vh;
   }
 
@@ -91,3 +87,22 @@
 .deleteButton {
   margin-left: auto;
 }
+
+.friendAvatar {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.friendsTitle {
+  position: sticky;
+  top: 0; 
+  z-index: 10; 
+  padding: 5px 0;
+  margin-top: 0;
+  font-size: 1.5rem; 
+  width: 100%;
+  background-color: $background-secondary;
+  text-align: center;
+}
+
