--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -248,13 +248,32 @@ header {
 }
 
 .menuForm {
-  padding: 20px 10px;
-  width: 80%;
-  margin-left: 10px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px;
+  box-sizing: border-box; 
+  display: none;
+
+  @media (max-width: 768px)  {
+    // position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 100%;
+    left: 0;
+    z-index: 50;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .select {
+    width: 100%;
+    font-size: $small;
+
+    @media (max-width: 768px) {
+      font-size: $small;
+    }
+  }
 }
 
 .menuForm input {
